<TinUI, a modern frame to render various widgets element for tkinter in one control.>
    Copyright (C) <2021-present>  <Smart-Space | Junming Zhang> <tsan-zane@outlook.com|smart-space@qq.com>
    2019（原型框架）2021（正式命名TinUI发布）

==========更新日志==========


==========5.8==========
2024-
1. button2, barbutton优化有图标无文字的排版
2. listview新增元素获取、删除、增加方法
3. 更新entry样式
*4. 更新passwordbox样式

==========5.7==========
2024-8-23
1. 修复scalebar禁用后仍然出现响应样式的问题
2. 修复checkbutton禁用后标识符错误的问题
3. 启用帮助手册

==========5.6==========
2024-8-23
1. 对话框按钮自定义文本
2. 优化menubar, menubutton, picker, combobox动画视觉效果
3. 新增选择对话框 ask_choice (listbox)
4. 修复notebook载入TinUI页面的错误

==========5.5==========
2024-8-15
1. 内置对话框

==========5.4==========
2024-8-8
1. 新增工具栏按钮组件，barbutton(AppBarButton)
2. button2添加icon参数，用来使用Fluent Icons符号，compound in top,bottom,left,right
3. 修复ratingbar某些情况下无法选中的错误

==========5.3==========
2024-7-31
1. TinUIXml编辑器手动输入标记点信息
2. entry添加删除、插入文本方法
3. menubutton可选是否显示标识符
4. TinUIXml自定义间距，优先级比坐标自定低

==========5.2==========
2024-7-16
1. button最大化宽度、最小化宽度参数
2. button2最大化宽度、最小化宽度参数
3. 修复treeview跨级选定展开单层后的报错问题
4. TinUIXml简易编辑器添加标记点管理
5. listbox的add方法中重新设计位置确定逻辑
6. listbox回调command参数result增加result.index属性

==========5.1==========
2024-7-5
1. test\tuxmltest.py 升级为简易TinUIxml编辑器
2. 优化scalebar标识符元素
3. BasicTinUI新增show_location方法，用于设计时反馈坐标信息
4. checkbutton引发响应的command接受的唯一参数为选定状态，True/False

==========5.0==========
2024-6-24
1. 以下控件接入统一坐标对齐模式：listview, pipspager, ratingbar,
    radiobox, pivot, button2, waitframe, passwordbox, image,
    swipecontrol, picker
2. radiobox使用新样式，同时更改默认间距
3. 优化expander样式
4. 优化spinbox提示符
5. 优化passwordbox提示符
6. 修复TinUIXml自定义初始坐标被忽略的问题
7. tinuixml修复x，y参数自定义，新增anchor自定义(精确到line，但是每个标签内优先级更高)
2024-6-16 pre-5
1. 更新checkbutton样式
2. waitbar2新样式
3. 以下控件接入统一坐标对齐模式：checkbutton, entry, radiobutton,
    link, waitbar1, waitbar2, combobox, button, label, progressbar,
    table, onoff, spinbox, scalebar, info, waitbar3
4. radiobutton去除边框
5. combobox新样式，增加height参数，控制浮出窗口高度
6. onoff新样式